--- a/client/index.html
+++ b/client/index.html
@@ -1,42 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <meta property="og:title" content="Cognitive OS - ERP Universal" />
-    <meta property="og:description" content="Sistema Operativo Cognitivo para negocios. Gestión inteligente, trazabilidad y automatización." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/icon-512.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cognitive OS" />
-    <meta name="theme-color" content="#020617" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Cognitive OS - ERP Universal</title>
-  </head>
-  <body class="dark bg-[#020617]">
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <script>
-      // EMERGENCY CLEANUP: Force unregister Service Worker to prevent MIME type errors
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.getRegistrations().then(function(registrations) {
-           for(let registration of registrations) {
-             registration.unregister().then(function() {
-               console.log('ServiceWorker unregistered');
-               // Optional: Force reload if we suspect cache is blocking, 
-               // but that might cause loops. Just unregistering is safer.
-             });
-           }
-        });
-      }
-    </script>
-  </body>
+  <meta property="og:title" content="Cognitive OS - ERP Universal" />
+  <meta property="og:description"
+    content="Sistema Operativo Cognitivo para negocios. Gestión inteligente, trazabilidad y automatización." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/icon-512.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Cognitive OS" />
+  <meta name="theme-color" content="#020617" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&family=Space+Grotesk:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+  <title>Cognitive OS - ERP Universal</title>
+</head>
+
+<body class="dark bg-[#020617]">
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
